# paralight

./: AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  build.yml  codecov.yml  examples.yml  format.yml  lints.yml  mdformat.yml  miri.yml  rustdoc.yml  tests.yml  tsan.yml
benches/: criterion.rs  divan.rs
examples/: add_fixed.rs  add_serial.rs  cli.rs  sum_fixed.rs  sum_serial.rs
src/: lib.rs  macros.rs  range.rs  sync.rs  thread_pool.rs  util.rs
src/core/: mod.rs  pipeline.rs  range.rs  rayon.rs  sync.rs  thread_pool.rs  util.rs
src/iter/: detail.rs  mod.rs  source.rs
src/iter/sink/: array.rs  mod.rs  vec.rs
src/iter/source/: array.rs  detail.rs  hashset.rs  mod.rs  owned_slice.rs  range.rs  slice.rs  vec.rs  vec_deque.rs  zip.rs
src/iter/source/ndim/: cartesian_product.rs  mod.rs  slice.rs  zip.rs
src/iter/source/vec/: nightly.rs
src/threads/: mod.rs  rayon.rs
src/threads/thread_pool/: mod.rs  sync.rs  util.rs
