[package]
name = "paralight"
description = "A lightweight parallelism library for indexed structures"
version = "0.0.7"
authors = ["Guillaume Endignoux <guillaumee@google.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gendx/paralight"
readme = "README.md"
categories = ["concurrency"]
keywords = ["parallelism", "thread-pool", "iterator"]
exclude = [".github/*"]
edition = "2021"
rust-version = "1.77.0"

[package.metadata.docs.rs]
features = ["log", "log_parallelism", "nightly"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
default = []
log = ["dep:log"]
log_parallelism = ["log"]
nightly = []
nightly_tests = []

[dependencies]
crossbeam-utils = "0.8.21"
log = { optional = true, version = "0.4" }

# Platforms that support `libc::sched_setaffinity()`.
[target.'cfg(any(target_os = "android", target_os = "dragonfly", target_os = "freebsd", target_os = "linux"))'.dependencies]
nix = { version = "0.30", features = ["sched"] }

[dev-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
criterion = "0.7.0"
divan = "0.1.17"
env_logger = "0.11.6"
rand = "0.9.0"
rand_chacha = "0.9.0"
rayon = "1.10.0"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false
