[package]
name = "paralight"
description = "A lightweight parallelism library for indexed structures"
version = "0.0.10"
authors = ["Guillaume Endignoux <guillaumee@google.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gendx/paralight"
readme = "README.md"
categories = ["concurrency"]
keywords = ["parallelism", "thread-pool", "iterator"]
exclude = [".github/*"]
edition = "2021"
rust-version = "1.80.0"

[package.metadata.docs.rs]
features = ["log", "log_parallelism", "nightly", "rayon"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
default = ["default-thread-pool"]
default-thread-pool = ["dep:nix", "dep:windows-sys"]
log = ["dep:log"]
log_parallelism = ["log"]
nightly = []
nightly_tests = []
rayon = ["dep:rayon-core"]

[dependencies]
crossbeam-utils = "0.8.21"
log = { optional = true, version = "0.4" }
rayon-core = { optional = true, version = "1.13.0" }

# Platforms that support `libc::sched_setaffinity()`.
[target.'cfg(any(target_os = "android", target_os = "dragonfly", target_os = "freebsd", target_os = "linux"))'.dependencies]
nix = { optional = true, version = "0.30", features = ["sched"] }

# Windows thread affinity support.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { optional = true, version = "0.61", features = ["Win32_System_Threading"] }

[dev-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
criterion = "0.7.0"
divan = "0.1.17"
env_logger = "0.11.6"
hashbrown = "0.16.1"
rand = "0.9.0"
rand_chacha = "0.9.0"
rayon = "1.10.0"

[[bench]]
name = "criterion"
harness = false
required-features = ["default-thread-pool"]

[[bench]]
name = "divan"
harness = false
required-features = ["default-thread-pool"]

[[example]]
name = "add_fixed"
required-features = ["default-thread-pool"]

[[example]]
name = "sum_fixed"
required-features = ["default-thread-pool"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
