[package]
name = "paralight"
description = "A lightweight parallelism library for indexed structures"
version = "0.0.10"
authors = ["Guillaume Endignoux <guillaumee@google.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gendx/paralight"
readme = "README.md"
categories = ["concurrency"]
keywords = ["parallelism", "thread-pool", "iterator"]
exclude = [".github/*"]
edition = "2021"
rust-version = "1.80.0"

[package.metadata.docs.rs]
features = ["log", "log_parallelism", "nightly", "rayon"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
default = ["default-thread-pool"]
default-thread-pool = ["dep:nix", "dep:windows-sys"]
log = ["dep:log"]
log_parallelism = ["log"]
nightly = []
nightly_tests = []
rayon = ["dep:rayon-core"]

[dependencies]
crossbeam-utils = "0.8.21"
log = { optional = true, version = "0.4.29" }
rayon-core = { optional = true, version = "1.13.0" }
scopeguard = "1.2.0"

# Platforms that support `libc::sched_setaffinity()`.
[target.'cfg(any(target_os = "android", target_os = "dragonfly", target_os = "freebsd", target_os = "linux"))'.dependencies]
nix = { optional = true, version = "0.31.1", features = ["sched"] }

# Windows thread affinity support.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { optional = true, version = "0.61.2", features = ["Win32_System_Threading"] }

[dev-dependencies]
clap = { version = "4.5.57", features = ["derive"] }
criterion = "0.8.2"
divan = "0.1.21"
env_logger = "0.11.8"
hashbrown = "0.16.1"
rand = "0.10.0"
chacha20 = { version = "0.10.0", features = ["rng"] }
rayon = "1.11.0"

[[bench]]
name = "criterion"
harness = false
required-features = ["default-thread-pool"]

[[bench]]
name = "divan"
harness = false
required-features = ["default-thread-pool"]

[[example]]
name = "add_fixed"
required-features = ["default-thread-pool"]

[[example]]
name = "sum_fixed"
required-features = ["default-thread-pool"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
